Bug 206254 - Akonadi resource crash while starting Kaddressbook
Summary: Akonadi resource crash while starting Kaddressbook
Status: VERIFIED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-04 15:00 UTC by Sabine Faure
Modified: 2009-09-25 17:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-04 15:00:52 UTC
Application: akonadi_imap_resource (0.1)
KDE Version: 4.3.66 (KDE 4.3.66 (KDE 4.4 >= 20090828)) (Compiled from sources)
Qt Version: 4.5.2
Operating System: Linux 2.6.27-9-generic i686
Distribution: Ubuntu 8.10

What I was doing when the application crashed:
Just launch Kaddress book and wait without doing anything and after a while (less than 10 minutes) the Akonadi resource crashes.

Trunk, Svn Rev 1019588

 -- Backtrace:
Application: Akonadi Resource (akonadi_imap_resource), signal: Aborted
[Current thread is 0 (LWP 7570)]

Thread 3 (Thread 0xb33fbb90 (LWP 7573)):
#0  0xb7b28a55 in pthread_mutex_lock () from /lib/tls/i686/cmov/libpthread.so.0
#1  0xb62a9366 in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#2  0xb62a9cad in ?? () from /usr/lib/libglib-2.0.so.0
#3  0xb62a9f81 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0xb7cd9232 in QEventDispatcherGlib::processEvents (this=0xa0fd130, flags={i = -1287671164}) at kernel/qeventdispatcher_glib.cpp:329
#5  0xb7ca7324 in QEventLoop::processEvents (this=0xb33fb30c, flags={i = -1287671092}) at kernel/qeventloop.cpp:149
#6  0xb7ca7595 in QEventLoop::exec (this=0xb33fb30c, flags={i = -1287671020}) at kernel/qeventloop.cpp:197
#7  0xb7bafa39 in QThread::exec (this=0x9fc86d0) at thread/qthread.cpp:487
#8  0xb70c51aa in KIMAP::SessionThread::run (this=0x1) at /d/kde/src/t/kdepimlibs/kimap/sessionthread.cpp:155
#9  0xb7bb3631 in QThreadPrivate::start (arg=0x9fc86d0) at thread/qthread_unix.cpp:188
#10 0xb7b2750f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#11 0xb6480a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xb2bfab90 (LWP 7574)):
#0  0xb7f50430 in __kernel_vsyscall ()
#1  0xb7b2b075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb7bb3f54 in QWaitConditionPrivate::wait (this=0xa097820, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  0xb7bb3a53 in QWaitCondition::wait (this=0xa097568, mutex=0xa097564, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0xb7177dd7 in QHostInfoAgent::run (this=0xa097558) at kernel/qhostinfo.cpp:260
#5  0xb7bb3631 in QThreadPrivate::start (arg=0xa097558) at thread/qthread_unix.cpp:188
#6  0xb7b2750f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb6480a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb53a78d0 (LWP 7570)):
[KCrash Handler]
#6  0xb7f50430 in __kernel_vsyscall ()
#7  0xb63ca8a0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb63cc268 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb65ee778 in __gnu_cxx::__verbose_terminate_handler () from /usr/lib/libstdc++.so.6
#10 0xb65ec655 in ?? () from /usr/lib/libstdc++.so.6
#11 0xb65ec692 in std::terminate () from /usr/lib/libstdc++.so.6
#12 0xb65ec7ca in __cxa_throw () from /usr/lib/libstdc++.so.6
#13 0x080754b0 in Akonadi::Item::payload<boost::shared_ptr<KMime::Message> > (this=0xbfc509c0) at /d/kde/inst/kde-trunk/include/akonadi/item.h:367
#14 0x0806b675 in ImapResource::itemAdded (this=0x9ffc718, item=@0xbfc509c0, collection=@0xbfc509d8) at /d/kde/src/t/kdepim/akonadi/resources/imap/imapresource.cpp:253
#15 0xb7e0d8e2 in Akonadi::AgentBasePrivate::itemAdded (this=0x9ffc740, item=@0xbfc509c0, collection=@0xbfc509d8) at /d/kde/src/t/kdepimlibs/akonadi/agentbase.cpp:230
#16 0xb7e0f9b1 in Akonadi::AgentBasePrivate::qt_metacall (this=0x9ffc740, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfc50958) at /d/kde/build/t/kdepimlibs/akonadi/agentbase_p.moc:86
#17 0xb7cc08d5 in QMetaObject::activate (sender=0x9feee58, from_signal_index=6, to_signal_index=6, argv=0xbfc50958) at kernel/qobject.cpp:3109
#18 0xb7cc1d4f in QMetaObject::activate (sender=0x9feee58, m=0xb7f30798, local_signal_index=2, argv=0xbfc50958) at kernel/qobject.cpp:3186
#19 0xb7ea11b9 in Akonadi::Monitor::itemAdded (this=0x9feee58, _t1=@0xbfc509c0, _t2=@0xbfc509d8) at /d/kde/build/t/kdepimlibs/akonadi/monitor.moc:164
#20 0xb7ea3e74 in Akonadi::MonitorPrivate::emitItemNotification (this=0xa002f18, msg=@0xbfc50a9c, item=@0xbfc50a38, collection=@0xbfc50a48, collectionDest=@0xbfc50a44)
    at /d/kde/src/t/kdepimlibs/akonadi/monitor_p.cpp:245
#21 0xb7ea4361 in Akonadi::MonitorPrivate::emitNotification (this=0xa002f18, msg=@0xbfc50a9c) at /d/kde/src/t/kdepimlibs/akonadi/monitor_p.cpp:145
#22 0xb7ea45cf in Akonadi::MonitorPrivate::dataAvailable (this=0xa002f18) at /d/kde/src/t/kdepimlibs/akonadi/monitor_p.cpp:154
#23 0xb7ea12e9 in Akonadi::Monitor::qt_metacall (this=0x9feee58, _c=QMetaObject::InvokeMetaMethod, _id=20, _a=0xbfc50b9c) at /d/kde/build/t/kdepimlibs/akonadi/monitor.moc:138
#24 0xb7e2b06a in Akonadi::ChangeRecorder::qt_metacall (this=0x9feee58, _c=QMetaObject::InvokeMetaMethod, _id=24, _a=0xbfc50b9c) at /d/kde/build/t/kdepimlibs/akonadi/changerecorder.moc:66
#25 0xb7cc08d5 in QMetaObject::activate (sender=0xa002f54, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3109
#26 0xb7cc1d4f in QMetaObject::activate (sender=0xa002f54, m=0xb7f2f368, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3186
#27 0xb7e5ca57 in Akonadi::EntityCacheBase::dataAvailable (this=0xa002f54) at /d/kde/build/t/kdepimlibs/akonadi/entitycache_p.moc:82
#28 0xb7e2b990 in Akonadi::EntityCache<Akonadi::Item, Akonadi::ItemFetchJob, Akonadi::ItemFetchScope>::fetchResult (this=0xa002f54, job=0xa0783e8)
    at /d/kde/src/t/kdepimlibs/akonadi/entitycache_p.h:181
#29 0xb7e5cacc in Akonadi::EntityCacheBase::qt_metacall (this=0xa002f54, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfc50d9c) at /d/kde/build/t/kdepimlibs/akonadi/entitycache_p.moc:71
#30 0xb7cc08d5 in QMetaObject::activate (sender=0xa0783e8, from_signal_index=7, to_signal_index=7, argv=0xbfc50d9c) at kernel/qobject.cpp:3109
#31 0xb7cc1d4f in QMetaObject::activate (sender=0xa0783e8, m=0xb688fcc8, local_signal_index=3, argv=0xbfc50d9c) at kernel/qobject.cpp:3186
#32 0xb6745048 in KJob::result (this=0xa0783e8, _t1=0xa0783e8) at /d/kde/build/t/kdelibs/kdecore/kjob.moc:188
#33 0xb67455ad in KJob::emitResult (this=0xa0783e8) at /d/kde/src/t/kdelibs/kdecore/jobs/kjob.cpp:304
#34 0xb7e9bdc7 in Akonadi::JobPrivate::handleResponse (this=0xa070f50, tag=@0xbfc50ea8, data=@0xbfc50ea4) at /d/kde/src/t/kdepimlibs/akonadi/job.cpp:67
#35 0xb7ec7a02 in Akonadi::SessionPrivate::dataReceived (this=0x9ffc978) at /d/kde/src/t/kdepimlibs/akonadi/session.cpp:121
#36 0xb7ec82ae in Akonadi::Session::qt_metacall (this=0xa0247f8, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfc50fac) at /d/kde/build/t/kdepimlibs/akonadi/session.moc:81
#37 0xb7cc08d5 in QMetaObject::activate (sender=0x9fe41e0, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3109
#38 0xb7cc1d4f in QMetaObject::activate (sender=0x9fe41e0, m=0xb7d66028, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3186
#39 0xb7cfcbb9 in QIODevice::readyRead (this=0x9fe41e0) at .moc/debug-shared/moc_qiodevice.cpp:85
#40 0xb7cfcc3c in QIODevice::qt_metacall (this=0x9fe41e0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfc510ec) at .moc/debug-shared/moc_qiodevice.cpp:71
#41 0xb719909b in QLocalSocket::qt_metacall (this=0x9fe41e0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfc510ec) at .moc/debug-shared/moc_qlocalsocket.cpp:75
#42 0xb7cc08d5 in QMetaObject::activate (sender=0xa001e1c, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3109
#43 0xb7cc1d4f in QMetaObject::activate (sender=0xa001e1c, m=0xb7d66028, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3186
#44 0xb7cfcbb9 in QIODevice::readyRead (this=0xa001e1c) at .moc/debug-shared/moc_qiodevice.cpp:85
#45 0xb7193802 in QAbstractSocketPrivate::canReadNotification (this=0xa001a78) at socket/qabstractsocket.cpp:604
#46 0xb71961c9 in QAbstractSocketPrivate::readNotification (this=0xa001a78) at socket/qabstractsocket_p.h:77
#47 0xb7181c41 in QAbstractSocketEngine::readNotification (this=0x9fe6d10) at socket/qabstractsocketengine.cpp:154
#48 0xb7183101 in QReadNotifier::event (this=0x9ffd730, e=0xbfc51598) at socket/qnativesocketengine.cpp:1036
#49 0xb7365ab1 in QApplicationPrivate::notify_helper (this=0x9f4e538, receiver=0x9ffd730, e=0xbfc51598) at kernel/qapplication.cpp:4056
#50 0xb7365e26 in QApplication::notify (this=0xbfc51838, receiver=0x9ffd730, e=0xbfc51598) at kernel/qapplication.cpp:3603
#51 0xb6ac2f6f in KApplication::notify (this=0xbfc51838, receiver=0x9ffd730, event=0xbfc51598) at /d/kde/src/t/kdelibs/kdeui/kernel/kapplication.cpp:302
#52 0xb7caa309 in QCoreApplication::notifyInternal (this=0xbfc51838, receiver=0x9ffd730, event=0xbfc51598) at kernel/qcoreapplication.cpp:606
#53 0xb7cade97 in QCoreApplication::sendEvent (receiver=0x9ffd730, event=0xbfc51598) at kernel/qcoreapplication.h:213
#54 0xb7cda1b0 in socketNotifierSourceDispatch (source=0x9f50910) at kernel/qeventdispatcher_glib.cpp:110
#55 0xb62a6718 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#56 0xb62a9dc3 in ?? () from /usr/lib/libglib-2.0.so.0
#57 0xb62a9f81 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#58 0xb7cd9212 in QEventDispatcherGlib::processEvents (this=0x9f4e4f8, flags={i = -1077602572}) at kernel/qeventdispatcher_glib.cpp:327
#59 0xb7414bc0 in QGuiEventDispatcherGlib::processEvents (this=0x9f4e4f8, flags={i = -1077602524}) at kernel/qguieventdispatcher_glib.cpp:202
#60 0xb7ca7324 in QEventLoop::processEvents (this=0xbfc517b0, flags={i = -1077602452}) at kernel/qeventloop.cpp:149
#61 0xb7ca7595 in QEventLoop::exec (this=0xbfc517b0, flags={i = -1077602376}) at kernel/qeventloop.cpp:197
#62 0xb7caaae1 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#63 0xb73657ca in QApplication::exec () at kernel/qapplication.cpp:3525
#64 0xb7eb1433 in Akonadi::ResourceBase::init (r=0x9ffc718) at /d/kde/src/t/kdepimlibs/akonadi/resourcebase.cpp:219
#65 0x08075c13 in Akonadi::ResourceBase::init<ImapResource> (argc=3, argv=0xbfc51914) at /d/kde/inst/kde-trunk/include/akonadi/resourcebase.h:186
#66 0x0806dc13 in main (argc=) at /d/kde/src/t/kdepim/akonadi/resources/imap/imapresource.cpp:1238

Reported using DrKonqi
Comment 1 Volker Krause 2009-09-10 09:20:10 UTC
SVN commit 1021821 by vkrause:

Guard payload() calls and get rid of the no longer needed typedef.

BUG: 206254 


 M  +13 -6     imapresource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021821
Comment 2 Sabine Faure 2009-09-25 17:17:47 UTC
It is corrected now.

There is no more Akonadi resource crash after starting Kaddressbook.

Trunk, Svn Rev 1027981