Guard payload() calls and get rid of the no longer needed typedef.

BUG: 206254 

svn path=/trunk/KDE/kdepim/akonadi/; revision=1021821